--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -567,8 +567,14 @@ input:checked + .slider:before  {
 	color: #FF0000;
 }
 
-.journeyAmountGreen {
+.journeysAmountGreen {
 	color: green;
+	font-family: Ubuntu;
+	padding-left: 13px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	font-size: 32px;
 }
 
 
