--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -18,6 +18,7 @@
     padding-left: 40px;
     padding-right: 40px;
     margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .imgLogo {
@@ -30,6 +31,7 @@
     padding-right:5px;
     margin-left: 5px;
     margin-right: 5px;
+    margin-top:15px;
     padding-bottom: 20px;
     /* border: 4px solid red; */
 }
@@ -44,6 +46,7 @@
 
 .dropDownContainerBox {
     margin-right: 7px;
+    margin-top: 10px;
 }
 
 .selected {
