--- a/src/components/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/CustomDropDownPanel/CustomDropDownPanel.css
@@ -37,8 +37,42 @@
     float:left;
     margin-right: 20px;
     padding-top: 20px;
+    -webkit-animation: fader 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fader 2s; /* Firefox < 16 */
+     -ms-animation: fader 2s; /* Internet Explorer */
+      -o-animation: fader 2s; /* Opera < 12.1 */
+         animation: fader 2s;
+}
+/* Drop Down Animations */
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
+/* Firefox < 16 */
+@-moz-keyframes fader {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fader {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fader {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fader {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 @media only screen and (max-width: 1607px) {
     /* tablets and desktop */
     .panelBarContainer-open{
