--- a/src/components/BottomSummaryBox/ButtomSummaryBox.css
+++ b/src/components/BottomSummaryBox/ButtomSummaryBox.css
@@ -13,12 +13,12 @@
 .summaryTitleHeader {
     background-color:#e8e8e8;
     height: 40px;
-    font-size: 1.9em;
+    font-size: 30px;
 }
 .journeyTitleHeader {
     background-color:#1F1F1F;
     height: 40px;
-    font-size: 1.9em;
+    font-size: 30px;
     color:white;
 }
 
@@ -56,7 +56,9 @@
 .statsHeader {
     float: right;
     margin-left: 40px;
-    font-size: 1em;
+    
+
+    
 }
 
 
@@ -128,4 +130,14 @@
     height:1px;
     width:100%;
     margin-bottom: 20px;
+}
+
+.percentage{
+    font-size: 18px;
+    font-weight: bold;
+    float:left;
+    clear:right;
+}
+.footer{
+    font-size:15px;
 }
