--- a/src/components/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/CustomDropDownPanel/CustomDropDownPanel.css
@@ -19,13 +19,13 @@
     height: 0;
     width: 100%;
     background-color: #3c3c3c;
-    padding-bottom:30px;
+    padding-bottom:10px;
 }
 .panelBarContainer-open{
     color: white;
     background-color: #3c3c3c;
-    height: 130px;
-    padding: 20px;
+    height: 170px !important;
+    padding-left: 20px;
 }
 
 .panelBarContainer-closed{
@@ -35,6 +35,7 @@
 
 .quarterFilterContainer{
     float:left;
+    font-size:14px !important;
     margin-right: 20px;
     padding-top: 20px;
     -webkit-animation: fader 2s; /* Safari, Chrome and Opera > 12.1 */
