--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,7 +3,7 @@
 }
 
 .navText {
-    font-size: 1.2em; 
+    font-size: 16px; 
 }
 
 .userIcon {
@@ -40,7 +40,7 @@
     padding-right: 10px;
     margin-top: 18px;
     padding-bottom: 20px;
-    font-size: 1.2em; 
+    font-size: 16px; 
 
 }
 
