--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -33,7 +33,7 @@
 }
 
 /* .gridContainer{
-    background-color: red;
+    background-color: #ff0000;
 	padding-bottom: 100px;
     height: 285px;
 } */
@@ -55,6 +55,8 @@
     width: 175px !important;
     border: 2px solid red !important;
 } */
+
+
 
 /* Arrow */
 
@@ -361,9 +363,17 @@ input:checked + .slider:before  {
 	font-size: 8px;
 }
 
+.selectedCardFontColorGreen {
+	color: #0DB16e;
+}
+
+.selectedCardFontColorRed {
+	color: #ff0000;
+}
+
 /* dynamic */
 .selectedCardHeaderRed {
-	background-color: red;
+	background-color: #ff0000;
 }
 .selectedCardHeaderGreen {
 	background-color: #0DB16e;
@@ -519,7 +529,7 @@ input:checked + .slider:before  {
 
 .journeyBoxAlert:after {
 	border-color: rgba(213, 213, 213, 0);
-	border-left-color:red;
+	border-left-color:#ff0000;
 	border-width: 15px;
 	margin-top: -15px;
 }
@@ -675,7 +685,7 @@ input:checked + .slider:before  {
 
 /* Background Indicators */
 .red{
-    color: red;
+    color: #ff0000;
 }
 .green{
     color: #0DB16E;
