--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -1,5 +1,124 @@
+/* Main Container */
 .sumViewContainer{
     width: 100%;
     height: 100%;
-    /* background-color: blue; */
+}
+
+/* Summary Breadcrumb */
+
+/*Detail Breadcrump */
+
+
+.titleBarHeader{
+    margin-top:15px;
+}
+
+/* Title for the detail Multi Chart */
+
+.detailTitle{
+    color: #000000;
+    
+    font-style: Light;
+    font-size: 30px;
+    line-height: 34px;
+    align-content: Left;
+    float:left;
+}
+
+/* Multi Chart Metric Container */
+.multiChartMetricContainer{
+    /* border-radius:100px; */
+    float: right;
+    width: 200px;
+    height:30px;
+}
+/* Units Metric Left Side of Selector */
+.unitMetric{
+    float:left;
+    text-align: center;
+    padding-top: 5px;
+    height:30px;
+
+    width:80px;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    border: 1px solid #3C3C3C;
+}
+
+.arrMetric{
+    float:left;
+    width:80px;
+    height:30px;
+    text-align: center;
+    padding-top:5px;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    border: 1px solid #3C3C3C;
+}
+
+/* Active Metric Chosen */
+.activeMetric{
+    width: 80px;
+    color:white;
+    width:80px;
+    background-color: #3C3C3C;
+
+}
+
+/* QTD Title Row */
+.qtdTitleBarHeader{
+    margin-top:33px;
+}
+
+/* QTD Title Header Text */
+.qtdTitle{
+    float:left;
+}
+
+/* QTD Total Metric Filter Container */
+.totalTimeMetricContainer{
+    float:right;
+    width:300px;
+    height:30px;
+}
+
+/* QTD Metric */
+.qtdMetric{
+    float:left;
+    text-align: center;
+    padding-top: 5px;
+    height:30px;
+
+    width:80px;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    border: 1px solid #3C3C3C;
+}
+
+.weekMetric{
+    padding-top: 5px;
+    height:30px;
+    width:80px;
+    float:left;
+    text-align: center;
+    border: 1px solid #3C3C3C;
+
+}
+
+.allMetric{
+    float:left;
+    width:80px;
+    height:30px;
+    text-align: center;
+    padding-top:5px;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    border: 1px solid #3C3C3C;
+}
+/* Active Time Metric Chosen */
+.activeTimeMetric{
+    width: 80px;
+    color:white;
+    background-color: #3C3C3C;
+
 }
