--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -156,7 +156,7 @@
 }
 .weekDetailTitle{
     float:right;
-    width: 750px;
+    width: 636px;
     height:30px;
     clear:right;
     text-align:center;
@@ -165,7 +165,10 @@
     border-right: 1px solid #D8D8D8;
     font-size: 12px;
 }
-.allDetailTitle{
+.allContainer{
+    padding: 0px;
+}
+.allWeekDetailTitle{
     float:right;
     text-align:center;
     padding:0px;
@@ -173,7 +176,17 @@
     border-top: 1px solid #D8D8D8;
     border-left: 1px solid #D8D8D8;
     border-right: 1px solid #D8D8D8;
-    width: 422px;
+    width: 390px;
+}
+.allQtdDetailTitle{
+    float:right;
+    text-align:center;
+    padding:0px;
+
+    border-top: 1px solid #D8D8D8;
+    border-left: 1px solid #D8D8D8;
+    border-right: 1px solid #D8D8D8;
+    width: 450px;
 }
 .qtdTotalTitle{
     float: left;
@@ -190,7 +203,7 @@
     /* width:105px; */
     height:80px;
     background-color:#F4F4F4;
-    float:left;
+    float:right;
     margin:1px;
 }
 .normalSize{
@@ -221,5 +234,5 @@
 }
 .halfTableSize{
     width:860px;
-
+    
 }
