--- a/src/components/KendoDialog/KendoDialog.css
+++ b/src/components/KendoDialog/KendoDialog.css
@@ -76,9 +76,93 @@
     color: #000000;
 }
 
+/* .contentpad {
+    padding-top: 13px;
+} */
+
+
+.default-kpi-labels {
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    font-size: 16px;
+
+    color: #000000;
+}
+
 #filter-reset {
     padding-top: 34px;
     font-size: 15px;
     color: #1573E6;
 }
 
+.checkBoxContainer {
+    height: 40px;
+    width: 200px;
+    background: #F4F4F4;
+    border-radius: 25px;
+}
+  
+.radio {
+    /* margin: 0.5rem; */
+    height: 40px;
+    width: 200px;
+    /* background: #F4F4F4;
+    border-radius: 25px; */
+    padding-top: 9.5px;
+}
+
+.radio-checked {
+    background: #F4F4F4;
+    border-radius: 25px;
+}
+
+.radio-label {
+    font-size: 16px;
+    margin-left: -9px;
+}
+
+.radio input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+}
+
+.radio input[type="radio"] + .radio-label:before {
+    content: '';
+    background: white;
+    border-radius: 100%;
+    border: 1px solid #2D2D2D;
+    display: inline-block;
+    width: 1.4em;
+    height: 1.4em;
+    position: relative;
+    /* top: -0.2em; */
+    margin-right: 1em;
+    vertical-align: top;
+    cursor: pointer;
+    text-align: center;
+    transition: all 250ms ease;
+}
+
+
+.radio input[type="radio"]:checked + .radio-label:before {
+    background-color: black;
+    box-shadow: inset 0 0 0 5px #f4f4f4;
+}
+
+.radio input[type="radio"]:focus + .radio-label:before {
+    outline: none;
+    border-color: #2D2D2D;
+}
+
+.radio input[type="radio"]:disabled + .radio-label:before {
+    box-shadow: inset 0 0 0 5px #f4f4f4;
+    border-color: #b4b4b4;
+    background: #b4b4b4;
+}
+
+  .radio input[type="radio"] + .radio-label:empty:before {
+    margin-right: 0;
+}
+  
