--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -11,12 +11,16 @@
 
 .summaryTitleCol{
     /* float: left; */
-    padding: 15px;
+    /* padding: 15px; */
     margin-top: 10px;
     font-size: 30px !important;
     color: white;
 }
 
+.switchContainer{
+
+	float: right;
+}
 /* .financialsLabel {
     padding: 5px, 5px, 5px, 5px;
     margin-right: 5px;
@@ -355,14 +359,23 @@ input:checked + .slider:before  {
 }
 
 /* Inside the Donut Charts */
-.insideDonut h2 {
-	font-size: 28px;
+.insideDonut {
+	padding-top: 30px;
+}
+.actual{
+	font-size:28px;
+	display:block;
+}
+.donutTargetText{
+	font-size: 10px;
+	display:block;
 }
 
-.insideDonut h6 h4 {
-	font-size: 8px;
-}
+.donutTargetValue{
+	font-size: 15px;
+	display:block;
 
+}
 .selectedCardFontColorGreen {
 	color: #0DB16e;
 }
@@ -591,7 +604,7 @@ input:checked + .slider:before  {
 }
 
 .journeysAmountGreen {
-	color: green;
+	color: #0DB16E;
 	font-family: Ubuntu;
 	padding-left: 13px;
 	font-style: normal;
