--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -175,6 +175,7 @@
 	/* display: inline-block; */
 	width: 250px;
 	height: 39px;
+
 }
 
 .switch input {display:none;}
@@ -232,18 +233,18 @@
   {
 	color: rgb(73, 73, 73);
 	font-size:16px;
-
+	padding-top: 2px;
   }
 
   .on {
-	  margin-left: 17px;
+	  margin-left: 23px;
 	  float: left;
 	  margin-top: 5px;
 	  font-size:16px;
   }
 
   .off {
-	  margin-right: 24px;
+	  margin-right: 30px;
 	  float: right;
 	  margin-top: 5px;
 	  font-size:16px;
