--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -14,7 +14,9 @@
     /* padding: 15px; */
     margin-top: 10px;
     font-size: 30px !important;
-    color: white;
+	color: white;
+    margin-bottom: 10px;
+	
 }
 
 .switchContainer{
