--- a/src/components/KendoPanelBar/KendoPanelBar.css
+++ b/src/components/KendoPanelBar/KendoPanelBar.css
@@ -45,7 +45,7 @@
 }
 .header{
     font-weight: bold;
-    background-color: #F4F4F4;
+    background-color: #F4F4F4 !important;
     
 }
 .qtdGeoHeader{
