--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -49,7 +49,9 @@
     /* background-image: linear-gradient(rgb(68, 68, 68),rgb(62, 62, 62),rgb(16, 16, 16)); */
 	/* padding-top: 30px; */
 	padding-bottom: 250px;
-    height: 285px;
+	/* height: 285px; */
+	height: 100%;
+	
 } 
 
 
@@ -474,9 +476,30 @@ input:checked + .slider:before  {
 	box-sizing: border-box;
 }
 
+.financialBox {
+	width: auto;
+	height: 135px;
+	background: #000000;
+	/* Dynamic */
+	border: 2px solid #3c3c3c;
+	box-sizing: border-box;
+}
+
 .journeyHeader {
 	height: 109px;
 	width: 40px;
+	left: 0%;
+	right: 96.09%;
+	top: 27.86%;
+	bottom: 57.94%;
+	font-size: 14px;
+	/* dynamic */
+	background: #3c3c3c;
+}
+
+.financialHeader {
+	height: 135px;
+	width: 20px;
 	left: 0%;
 	right: 96.09%;
 	top: 27.86%;
@@ -593,7 +616,17 @@ input:checked + .slider:before  {
 	padding-left: 60px;
 	padding-top: 14px;
 	color: #FFFFFF;
+}
 
+.financialContent {
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: 200;
+	line-height: normal;
+	font-size: 15px;
+	padding-left: 60px;
+	padding-top: 14px;
+	color: #FFFFFF;
 }
 
 .journeysAmount {
@@ -742,6 +775,10 @@ input:checked + .slider:before  {
 
 
 .journeyBoxHover:hover {
+	animation: grow .20s ease-in-out forwards;
+	}
+
+.financialBoxHover:hover {
 	animation: grow .20s ease-in-out forwards;
 	}
 	
