--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -255,14 +255,31 @@
 
 .exportButton{
     margin-left:20px;
-    background-color: #1573E6;
+    color: #1573E6;
+    background-color:  white;
     border-bottom-left-radius: 100px;
     border-top-left-radius: 100px;
-    padding-left:24px;
+    padding-left:20px;
+    padding-top: 0px;
     border-bottom-right-radius: 100px;
     border-top-right-radius: 100px;
-    padding-right:24px;
-    color:white;
-    border:none;
-    font-size: 16px;
+    padding-right:20px;
+    height: 30px;
+    /* color:white; */
+    border: 1px solid #1573E6;
+    font-weight: bold;
+    font-size: 12px;
+    margin-bottom: 2px;
+    text-align: center;
+    align-self: auto;
+    float:right;
+
+}
+
+.excelLogo{
+    margin-left: 10px;
+    height: 20px;
+    width: 20px;
+}
+.excelSpan{
 }
