--- a/src/components/CommentBox/CommentBox.css
+++ b/src/components/CommentBox/CommentBox.css
@@ -28,16 +28,102 @@
     border-radius: 50%;
     text-align: center;
 }
+
+.commentDate{
+    width:100%;
+    height: 60px;
+    background-color:white;
+    padding: 5%;
+    font-size: 16px;
+    color: grey;
+}
+hr{
+    border-top: 1px solid lightslategray !important;
+    margin-top: 10px !important; 
+    padding-top: 5%;
+     margin-bottom: 0px !important; 
+}
 .commentsContainer{
     width:100%;
     height: 60%;
     background-color:white;
+    scroll-behavior: smooth;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding: 5%;
 }
 .commentResponseFooter{
     margin:5%;
+    float: left;
+    width: 90%
 }
 .replyTextInput{
     width: 100%;
     height: 40px;
     padding:5px;
+    margin-bottom: 5px;
+}
+.newPhotoUploadIcon{
+    background-image: url("../../assets/images/camera.png");
+    height: 30px;
+    width: 30px;
+    display:inline-block;
+    border: 1px dashed black;
+    padding: 10px;
+    background-position-x: center;
+    background-position-y: center;
+    background-repeat: no-repeat;
+}
+
+.comment{
+    height: auto;
+    width: 100%;
+    float:left;
+    margin-bottom: 5%;
+    /* background-color: grey; */
+}
+.commentUserHeader{
+    height: 30px;
+}
+.commentUserIcon{
+    background-image:url("../../assets/images/user.png");
+    width:35px;
+    height: 35px;
+    background-repeat: no-repeat;
+    display:inline-block;
+    border-radius: 100%;
+    /* border: 1px solid blue; */
+    background-position-x: center;
+    background-position-y:  center;
+
+}
+.commentUserName{
+    display:inline-block;
+    height: 40px;
+    vertical-align: top;
+    padding-left: 2.5%;
+
+}
+.commentTime{
+    display:inline-block;
+    vertical-align: top;
+    padding-left: 2.5%;
+}
+.mainCommentContent{
+    padding-left:10%;
+    vertical-align: top;
+}
+.replyArrow{
+    background-image: url("../../assets/images/reply-arrow.png");
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    height:20px;
+    width:20px;
+    display:inline-block;
+    vertical-align: middle;
+}
+
+.repliesContainer{
+
 }
