--- a/src/components/FilterPillBox/FilterPillBox.css
+++ b/src/components/FilterPillBox/FilterPillBox.css
@@ -4,6 +4,8 @@
     border: 1px solid #ffffffd8;
     border-radius: 20px;
     padding: 5px;
+    padding-left: 10px;
+    padding-right:10px;
     margin-bottom: 20px;
     margin-top:40px;
     width: inherit;
