--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -3,7 +3,10 @@
     width: 100%;
     height: 100%;
     padding-top:15px;
-    background-color: white;
+    /* background-color: white; */
+    background-color: #F4F4F4;
+    padding-left: 15px;
+    padding-right: 15px;
 
 }
 
@@ -33,10 +36,12 @@
     line-height: 34px;
     align-content: Left;
     float:left;
+    background-color: #F4F4F4;
+    
 }
 
 .chartContainer{
-    background-color: #f4f4f4;
+    background-color: #F4F4F4;
 }
 /* Multi Chart Metric Container */
 .multiChartMetricContainer{
