--- a/src/components/KendoPanelBar/KendoPanelBar.css
+++ b/src/components/KendoPanelBar/KendoPanelBar.css
@@ -42,6 +42,7 @@
 }
 .qtdGeoHeader{
     text-align:  left !important;
+    padding-left: 5px;
 }
 .qtdMaHeader{
     text-align:  right !important;
