--- a/src/components/FinancialSummary/FinancialSummary.css
+++ b/src/components/FinancialSummary/FinancialSummary.css
@@ -1,6 +1,4 @@
-.chartRow{
-	padding-bottom: 60px;
-}
+/* Financial Squares */
 /* Card Flip */
 
 .flip-container {
@@ -15,7 +13,88 @@
 	width: 100%;
 	height: 480px;
 }
+/**Horizontal Spins**/
+.spinMeFirst{
+	animation: spin 0.6s ease-in-out forwards; 
 
+}
+.spinMeSecond{
+	animation: spin 0.8s ease-in-out forwards; 
+
+}
+.spinMeThird{
+	animation: spin 1.0s ease-in-out forwards; 
+
+}
+.spinMeFourth{
+	animation: spin 1.2s ease-in-out forwards; 
+
+}
+@-moz-keyframes spin {
+  from {-moz-transform: rotateY(0deg);}
+  to {-moz-transform: rotateY(360deg);}
+} 
+@-webkit-keyframes spin {
+	from {-webkit-transform: rotateY(0deg);}
+	to {-webkit-transform: rotateY(360deg);}
+} 
+@keyframes spin {
+	from {transform: rotateY(0deg);}
+	to {transform: rotateY(360deg);}
+} 
+
+  /**Vertical Spins**/
+.vertSpinMeFirst{
+	animation: slideIn 0.4s  forwards; 
+
+}
+.vertSpinMeSecond{
+	animation: slideIn 0.6s  forwards; 
+
+}
+.vertSpinMeThird{
+	animation: slideIn 0.8s  forwards; 
+
+}
+.vertSpinMeFourth{
+	animation: slideIn 1s  forwards; 
+
+}
+.vertSpinMeFifth{
+	animation: slideIn 1.2s  forwards; 
+}
+.vertSpinMeSixth{
+	animation: slideIn 1.4s forwards;
+}
+@-moz-keyframes vertspin {
+	from {-moz-transform: rotateX(0deg);}
+	to {-moz-transform: rotateX(720deg);}
+} 
+@-webkit-keyframes vertspin {
+	from {-webkit-transform: rotateX(0deg);}
+	to {-webkit-transform: rotateX(720deg);}
+} 
+@keyframes vertspin {
+	from {transform: rotateX(0deg);}
+	to {transform: rotateX(720deg);}
+} 
+
+@-moz-keyframes slideIn {
+	0% { -webkit-transform: translateX(-600px); }
+	50% { -webkit-transform: translateX(-240px); }
+    100% { -webkit-transform: translateX(0); }
+} 
+@-webkit-keyframes slideIn {
+	0% { -webkit-transform: translateX(-600px); }
+	50% { -webkit-transform: translateX(-240px); }
+    100% { -webkit-transform: translateX(0); }
+} 
+@keyframes slideIn {
+	0% { -webkit-transform: translateX(-600px); }
+	50% { -webkit-transform: translateX(-240px); }
+    100% { -webkit-transform: translateX(0); }
+} 
+ 
 /* flip speed goes here */
 .flipper {
 	transition: 0.6s;
@@ -23,6 +102,18 @@
 	position: relative;
 }
 
+
+/* On Hover Zoom for Card Charts - Donut */
+
+.zoom {
+	padding-top: 7px;
+    transition: transform .2s; /* Animation */
+}
+
+/* zooming in for the cards on Journey Financial Summary */
+.zoom:hover {
+    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 /* hide back of pane during swap */
 .front, .back {
 	backface-visibility: hidden;
@@ -41,18 +132,6 @@
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
-}
-
-/* On Hover Zoom for Card Charts - Donut */
-
-.zoom {
-	padding-top: 7px;
-    transition: transform .2s; /* Animation */
-}
-
-/* zooming in for the cards on Journey Financial Summary */
-.zoom:hover {
-    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 /* Animation */
@@ -78,13 +157,13 @@
 	100% {transform: scale(1.02); }
 }
 
+
 /* Previous Inline Style */
 .sumChartSquare {
 	height: 230px; 
 	width: 100%;
 	margin-top: 10px;
 }
-
 
 .selectedCardFontColorGreen {
 	color: #0DB16e;
@@ -110,9 +189,130 @@
 	height: 225px;
 }
 
+.finCommentIcon{
+	margin-top: 4px;
+	margin-right: 4px;
+	z-index: 3;
+	position: relative;
+	float:right;
+}
 .selectedCard {
 	height: 225px;
 
 	padding-top: 15px;
 	margin-bottom: 20px;
+}
+.selectedCardText {
+	color: white !important;
+}
+.sumChartHeaderText {
+	/* dynamic */
+	color: rgb(21, 21, 21);
+	padding-top: 8px;
+	text-align: center;
+	font-size:18px;
+}
+
+.sumChartContent {
+	height:100%;
+	width:100%;
+	background-color: white;
+}
+
+.donutChart {
+	padding-top: 4px;
+	position: absolute;
+}
+
+
+/* Arrow */
+
+.arrow_box {
+	position: absolute;
+	background: white;
+	border-bottom: 4px solid white;
+	
+    height: 175px;
+}
+.arrow_box:after, .arrow_box:before {
+	top: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.arrow_box:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-top-color:white;
+	border-width: 15px;
+	margin-left: -15px;
+}
+.arrow_box:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-top-color:white;
+	border-width: 21px;
+	margin-left: -21px;
+}
+
+
+/* Inside the Donut Charts */
+.insideDonut {
+	padding-top: 30px;
+}
+.valueText{
+	font-size:30px;
+	display:block;
+}
+
+.selectedCardFontColorGreen {
+	color: #0DB16e;
+}
+
+.selectedCardFontColorRed {
+	color: #ff0000;
+}
+/* End Financial Squares */
+
+
+.chartRow{
+	padding-bottom: 60px;
+}
+/* Card Flip */
+
+.flip-container {
+	perspective: 1000px;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .front, .back {
+	width: 100%;
+	height: 480px;
+}
+
+
+
+
+
+.summaryBox{
+	background-color: #1f1f1f;
+    /* background-image: linear-gradient(rgb(68, 68, 68),rgb(62, 62, 62),rgb(16, 16, 16)); */
+	/* padding-top: 30px; */
+	padding-bottom: 250px;
+    height: 285px;
+} 
+
+
+
+.bottomSummaryContainer{
+    padding-top: 200px;
+    background-color: #1f1f1f;
+	height: 100%;
+	width:100%
 }
