--- a/src/components/SummaryHeader/SummaryHeader.css
+++ b/src/components/SummaryHeader/SummaryHeader.css
@@ -116,4 +116,19 @@ input:checked + .slider:before  {
 	border-radius: 32px;
 }
 
-  
+	
+
+/* Animation */
+.example-appear {
+	opacity: 0;
+	transform: translateY(-200px);
+	animation-duration: 4s;
+	animation-delay: 2s;
+}
+.example-appear.example-appear-active {
+	opacity: 1;
+	transform: translateY(0px);
+	transition: all 1s ease-out;
+	animation-duration: 100s;
+	animation-delay: 5s;
+}
