Refactored Index .js and util

--- a/src/components/FinancialSummary/FinancialSummary.css
+++ b/src/components/FinancialSummary/FinancialSummary.css
@@ -305,7 +305,7 @@
     /* background-image: linear-gradient(rgb(68, 68, 68),rgb(62, 62, 62),rgb(16, 16, 16)); */
 	/* padding-top: 30px; */
 	padding-bottom: 250px;
-    height: 285px;
+    height: 100%;
 } 
 
 
