--- a/src/components/KendoDialog/KendoDialog.css
+++ b/src/components/KendoDialog/KendoDialog.css
@@ -169,3 +169,19 @@
 .pullUp {
     margin-top: -15px;
 }
+
+
+.saveButton{
+    background-color:#1573e6;
+    border-radius:18px;
+    width: 133px;
+    height: 36px;
+    color: #ffffff; 
+    padding:5px;
+    font-size:16px;
+    border:none;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
