--- a/src/components/KendoDialog/KendoDialog.css
+++ b/src/components/KendoDialog/KendoDialog.css
@@ -39,6 +39,12 @@
     height: 30px;
 }
 
+.k-window-title {
+    margin-left: 5px;
+    font-weight: 350;
+    font-size: 30px;
+}
+
 /* Dialog Titles */
 
 .dialogTitles {
