--- a/src/components/KendoMultiChart/KendoMultiChart.css
+++ b/src/components/KendoMultiChart/KendoMultiChart.css
@@ -4,3 +4,38 @@
     height: 10px !important;
     border-radius: 50% !important;
 }
+
+.actualMarker {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.tooltipActual {
+    background-color: white;
+}
+
+
+.tooltipTarget {
+    background-color: #0E9CC6;
+}
+
+
+.tooltipLastYear {
+    background-color:#DFDE43;
+}
+
+.tooltipTitle {
+    color: white;
+    display: inline-block;
+    margin-left: 35%;
+    margin-bottom: 10px;
+    
+}
+
+.tooltipValue {
+    margin-left: 7px;
+    float: right;
+}
