--- a/src/components/FinancialSummary/FinancialSummary.css
+++ b/src/components/FinancialSummary/FinancialSummary.css
@@ -231,7 +231,7 @@
 	position: absolute;
 	background: white;
 	border-bottom: 4px solid white;
-	
+	width:100%;
     height: 175px;
 }
 .arrow_box:after, .arrow_box:before {
