Data Preference Page Work on showing active filters

--- a/src/components/KendoDialog/KendoDialog.css
+++ b/src/components/KendoDialog/KendoDialog.css
@@ -191,3 +191,87 @@
     display: block;
 }
 
+.filterList {
+    display: inline;
+    list-style: none;
+}
+
+.filterList li {
+    display: inline-block;
+    border: 1px solid #2D2D2D;
+    border-radius: 25px;
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.filterList li:after {
+    content: "  ";
+  }
+
+.filterListItems {
+    padding-top: 12px;
+    font-size: 10px;
+    
+}
+
+.userPompt{
+    display: block;
+    width: 939px;
+    height: 626px;
+    background-color: red;
+}
+
+/* saved */
+
+.saving {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%);
+  }
+  .saving .dots {
+    height: 5px;
+    width: 5px;
+    padding: 10px;
+    background: #fff;
+    border-radius: 80px;
+    animation-name: opacityDots;
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+    margin: 0 5px;
+  }
+  .saving .dots:nth-child(1) {
+    animation-delay: 0.3s;
+  }
+  .saving .dots:nth-child(2) {
+    animation-delay: 0.6s;
+  }
+  .saving .dots:nth-child(3) {
+    animation-delay: 0.9s;
+  }
+  .saving .dots:nth-child(4) {
+    animation-delay: 1.2s;
+  }
+  .saving .dots:nth-child(5) {
+    animation-delay: 1.5s;
+  }
+  
+  @keyframes opacityDots {
+    0% {
+      opacity: .2;
+    }
+    20% {
+      opacity: 1;
+    }
+    100% {
+      opacity: .2;
+    }
+  }
+  
