--- a/src/components/FinancialSummary/FinancialSummary.css
+++ b/src/components/FinancialSummary/FinancialSummary.css
@@ -222,6 +222,7 @@
 .donutChart {
 	padding-top: 4px;
 	position: absolute;
+	width: 100%
 }
 
 
@@ -231,7 +232,7 @@
 	position: absolute;
 	background: white;
 	border-bottom: 4px solid white;
-	
+	width: 100%;
     height: 175px;
 }
 .arrow_box:after, .arrow_box:before {
